cncProd/force-app/main/default/objects/Model_Color_Trim_Master__c/Model_Color_Trim_Master__c.object-meta.xml
<CustomObject>
    <label>Model Color Trim Master</label>
    <nameField>
        <label>MTC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Model Color Trim Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>