cncProd/force-app/main/default/objects/Model_Color_Trim_Master__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color Code</label>
    <referenceTo>Color_Master__c</referenceTo>
    <relationshipLabel>Model Color Trim Master</relationshipLabel>
    <relationshipName>ModelColors</relationshipName>
    <type>Lookup</type>
</CustomField>