cncProd/force-app/main/default/objects/Model_Color_Trim_Master__c/fields/Trim_Code__c.field-meta.xml
<CustomField>
    <fullName>Trim_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trim Code</label>
    <referenceTo>Trim_Master__c</referenceTo>
    <relationshipName>ModelColors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>