cncProd/force-app/main/default/objects/Model_Color_Trim_Master__c/fields/Variant_Description__c.field-meta.xml
<CustomField>
    <fullName>Variant_Description__c</fullName>
    <formula>Model_Code__r.Model_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variant Description</label>
    <type>Text</type>
</CustomField>