cncProd/force-app/main/default/objects/Model_Color_Trim_Master__c/listViews/All_MITs.listView-meta.xml
<ListView>
    <fullName>All_MITs</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Model_Code__c</columns>
    <columns>Trim_Code__c</columns>
    <columns>Color_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Franchise_Code__c</field>
        <operation>equals</operation>
        <value>MITPC</value>
    </filters>
    <label>All MITs</label>
    <sharedTo>
        <group>MITPC_Sales_Managers</group>
        <role>MITPC_Sales_Manager</role>
    </sharedTo>
</ListView>