cncProd/force-app/main/default/objects/Model_Color_Trim_Master__c/listViews/Current_KIA_List.listView-meta.xml
<ListView>
    <fullName>Current_KIA_List</fullName>
    <columns>NAME</columns>
    <columns>Variant_Description__c</columns>
    <columns>Model_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Color_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Branch_Code__c</field>
        <operation>equals</operation>
        <value>CCK</value>
    </filters>
    <label>Current KIA List</label>
</ListView>